--- a/package.json
+++ b/package.json
@@ -9,18 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@irys/sdk": "^0.2.11",
+    "@tanstack/react-query": "^5.80.6",
+    "buffer": "^6.0.3",
+    "connectkit": "^1.9.0",
+    "ethers": "^5.7.2",
+    "lucide-react": "^0.515.0",
+    "next": "14.2.29",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.29"
+    "react-dropzone": "^14.3.8",
+    "react-hot-toast": "^2.5.2",
+    "viem": "^2.31.2",
+    "wagmi": "^2.15.6"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.29",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.29"
+    "typescript": "^5"
   }
 }
