--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@
 # next.js
 /.next/
 /out/
+.next/
+dist/
 
 # production
 /build
@@ -24,13 +26,16 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
+pnpm-debug.log*
 # local env files
 .env*.local
-
+.env
 # vercel
 .vercel
 
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+.DS_Store
+Thumbs.db
