--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "buffer": "^6.0.3",
     "connectkit": "^1.9.0",
     "ethers": "^5.7.2",
+    "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.515.0",
     "next": "14.2.29",
     "react": "^18",
@@ -25,6 +27,7 @@
     "wagmi": "^2.15.6"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^18",
