--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "connectkit": "^1.9.0",
     "ethers": "^5.7.2",
     "file-saver": "^2.0.5",
+    "framer-motion": "^12.18.1",
     "jszip": "^3.10.1",
     "lucide-react": "^0.515.0",
     "next": "14.2.29",
