--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18",
     "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.5.2",
+    "use-sound": "^5.0.0",
     "viem": "^2.31.2",
     "wagmi": "^2.15.6"
   },
