--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@irys/sdk": "^0.2.11",
     "@tanstack/react-query": "^5.80.6",
+    "babel-loader": "^10.0.0",
     "buffer": "^6.0.3",
     "connectkit": "^1.9.0",
     "ethers": "^5.7.2",
@@ -40,6 +41,7 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.4.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "worker-loader": "^3.0.8"
   }
 }
