--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,8 +25,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    "**/*.d.ts",
-    ".next/types/**/*.ts"
+    "src/types/worker.d.ts"
   ],
   "exclude": ["node_modules"]
 }
