--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "@types/react-dom": "^18.3.7",
     "eslint": "^8",
     "eslint-config-next": "14.2.29",
+    "ignore-loader": "^0.1.2",
     "jest": "^29.7.0",
+    "pino-pretty": "^13.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.4.0",
